--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,11 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Authorization
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        recources.qrc
-        recources.qrc
+
+
+        anotherwindow.h anotherwindow.cpp anotherwindow.ui
+        resources.qrc
+        anotherwindow.h anotherwindow.cpp anotherwindow.ui
 
 
 
